--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+ 
+  assets: 
+    - asset/img/misc/
+    - asset/img/food/
+    - asset/svg/icon/
+    - asset/img/logo/
+    - asset/rive/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,6 +78,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: NotoSans
+      fonts:
+      - asset: asset/fonts/NotoSansKr-Black.otf
+        weight: 900
+      - asset: asset/fonts/NotoSansKr-Bold.otf
+        weight: 700
+      - asset: asset/fonts/NotoSansKr-Medium.otf
+        weight: 500
+      - asset: asset/fonts/NotoSansKr-Regular.otf
+        weight: 400
+      - asset: asset/fonts/NotoSansKr-Light.otf
+        weight: 300
+      - asset: asset/fonts/NotoSansKr-Thin.otf
+        weight: 100
   # fonts:
   #   - family: Schyler
   #     fonts:
