--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.2
   flutter_secure_storage: ^9.0.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
