--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   json_annotation: ^4.8.1
   retrofit: ^4.0.1
   retrofit_generator: ^7.0.8
+  flutter_riverpod: ^2.4.2
+  riverpod_annotation: ^2.1.6
+  riverpod_generator: ^2.3.2
 
 dev_dependencies:
   flutter_test:
