--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_riverpod: ^2.4.2
   riverpod_annotation: ^2.1.6
   riverpod_generator: ^2.3.2
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
