--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   riverpod_annotation: ^2.1.6
   riverpod_generator: ^2.3.2
   skeletons: ^0.0.3
+  go_router: ^12.0.1
 
 dev_dependencies:
   flutter_test:
