--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   riverpod_generator: ^2.3.2
   skeletons: ^0.0.3
   go_router: ^12.0.1
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
