--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   go_router: ^12.0.1
   badges: ^3.1.2
   uuid: ^4.2.1
+  debounce_throttle: ^2.0.0
 
 dev_dependencies:
   flutter_test:
